# claude-code-proxy

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py
app/: config.py  logging.py  main.py
app/converters/: __init__.py  request.py  response.py  streaming.py
app/models/: __init__.py  request.py  response.py
app/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  registry.py
app/routers/: messages.py
